--- a/FoodCollector/Groups.storyboard
+++ b/FoodCollector/Groups.storyboard
@@ -252,6 +252,9 @@
                             <constraint firstItem="d5H-bE-XIr" firstAttribute="leading" secondItem="z7r-gC-wAh" secondAttribute="leadingMargin" constant="-20" id="zFS-oy-yNE"/>
                         </constraints>
                     </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="addMemberButton" destination="kcc-9N-fbs" id="k7z-TZ-0Ew"/>
                         <outlet property="groupNameLabel" destination="eAo-NQ-kGY" id="H9R-9T-cnw"/>
@@ -259,7 +262,7 @@
                     </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="1730.5" y="389.5"/>
+            <point key="canvasLocation" x="1731.5" y="389.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="t7g-tc-Afm">
