--- a/FoodCollector/Groups.storyboard
+++ b/FoodCollector/Groups.storyboard
@@ -459,51 +459,74 @@
                                 <rect key="frame" x="-4" y="248" width="383" height="419"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="groupDetailsMemberCell" rowHeight="52" id="ecZ-hU-6FU">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="groupDetailsMemberCell" rowHeight="52" id="ecZ-hU-6FU" customClass="GroupDetailsMemberTVCell" customModule="FoodCollector" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="383" height="52"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ecZ-hU-6FU" id="Ypx-wn-Okg">
                                             <rect key="frame" x="0.0" y="0.0" width="383" height="51"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0S6-hm-OaY">
-                                                    <rect key="frame" x="20" y="11" width="16" height="29"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Notusericon" translatesAutoresizingMaskIntoConstraints="NO" id="0S6-hm-OaY">
+                                                    <rect key="frame" x="20" y="11" width="28" height="30"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="16" id="7LF-hu-Ral"/>
-                                                        <constraint firstAttribute="height" constant="29" id="XJb-to-srq"/>
+                                                        <constraint firstAttribute="width" constant="28" id="7LF-hu-Ral"/>
+                                                        <constraint firstAttribute="height" constant="30" id="XJb-to-srq"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L7b-ba-bJE">
-                                                    <rect key="frame" x="50" y="15" width="250" height="21"/>
+                                                    <rect key="frame" x="62" y="11" width="238" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nCh-99-G2f">
-                                                    <rect key="frame" x="320" y="8" width="35" height="35"/>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nCh-99-G2f">
+                                                    <rect key="frame" x="329" y="11" width="30" height="30"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="35" id="FB6-qH-lGD"/>
-                                                        <constraint firstAttribute="height" constant="35" id="QmC-mH-7ux"/>
+                                                        <constraint firstAttribute="width" constant="30" id="FB6-qH-lGD"/>
+                                                        <constraint firstAttribute="height" constant="30" id="QmC-mH-7ux"/>
                                                     </constraints>
-                                                    <state key="normal" title="Button"/>
+                                                    <state key="normal" image="DeleteMember"/>
+                                                    <connections>
+                                                        <action selector="deleteCellTapped:" destination="ecZ-hU-6FU" eventType="touchUpInside" id="9gJ-1n-zyI"/>
+                                                    </connections>
                                                 </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d3X-HW-uoP">
+                                                    <rect key="frame" x="62" y="31" width="250" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="fhJ-vV-u5w"/>
+                                                        <constraint firstAttribute="width" constant="250" id="xkh-3x-1sr"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="L7b-ba-bJE" firstAttribute="leading" secondItem="0S6-hm-OaY" secondAttribute="trailing" constant="14" id="1Bw-hY-rZI"/>
-                                                <constraint firstItem="nCh-99-G2f" firstAttribute="leading" secondItem="L7b-ba-bJE" secondAttribute="trailing" constant="20" id="1fo-se-FGj"/>
+                                                <constraint firstItem="nCh-99-G2f" firstAttribute="leading" secondItem="L7b-ba-bJE" secondAttribute="trailing" constant="29" id="1fo-se-FGj"/>
+                                                <constraint firstItem="d3X-HW-uoP" firstAttribute="leading" secondItem="0S6-hm-OaY" secondAttribute="trailing" constant="14" id="6yI-cF-Dfq"/>
                                                 <constraint firstItem="nCh-99-G2f" firstAttribute="centerY" secondItem="Ypx-wn-Okg" secondAttribute="centerY" id="G58-Tn-dJ2"/>
                                                 <constraint firstItem="L7b-ba-bJE" firstAttribute="trailing" secondItem="Ypx-wn-Okg" secondAttribute="trailingMargin" id="Kix-Fo-IJN"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="nCh-99-G2f" secondAttribute="trailing" constant="20" id="WyR-6C-kgU"/>
-                                                <constraint firstItem="L7b-ba-bJE" firstAttribute="centerY" secondItem="Ypx-wn-Okg" secondAttribute="centerY" id="h7X-zN-Fyu"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="nCh-99-G2f" secondAttribute="trailing" constant="16" id="WyR-6C-kgU"/>
+                                                <constraint firstItem="d3X-HW-uoP" firstAttribute="top" secondItem="L7b-ba-bJE" secondAttribute="bottom" constant="-1" id="YWl-cQ-I8B"/>
+                                                <constraint firstItem="d3X-HW-uoP" firstAttribute="top" secondItem="Ypx-wn-Okg" secondAttribute="topMargin" constant="20" id="bdQ-VH-8It"/>
+                                                <constraint firstItem="L7b-ba-bJE" firstAttribute="centerY" secondItem="Ypx-wn-Okg" secondAttribute="centerY" constant="-4" id="h7X-zN-Fyu"/>
                                                 <constraint firstItem="0S6-hm-OaY" firstAttribute="centerY" secondItem="Ypx-wn-Okg" secondAttribute="centerY" id="hZy-pl-ebA"/>
                                                 <constraint firstItem="0S6-hm-OaY" firstAttribute="leading" secondItem="Ypx-wn-Okg" secondAttribute="leadingMargin" constant="12" id="sy5-f7-YgJ"/>
                                             </constraints>
                                             <variation key="default">
                                                 <mask key="constraints">
                                                     <exclude reference="Kix-Fo-IJN"/>
+                                                    <exclude reference="bdQ-VH-8It"/>
                                                 </mask>
                                             </variation>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="deleteCellButton" destination="nCh-99-G2f" id="9Y3-yy-2zs"/>
+                                            <outlet property="isAdminLabel" destination="d3X-HW-uoP" id="Wum-5j-DTt"/>
+                                            <outlet property="memberIcon" destination="0S6-hm-OaY" id="gCm-Oj-dKY"/>
+                                            <outlet property="memberNameLable" destination="L7b-ba-bJE" id="ftn-MX-DlH"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -565,9 +588,11 @@
     </scenes>
     <resources>
         <image name="AddGroup" width="56" height="56"/>
+        <image name="DeleteMember" width="26" height="26"/>
         <image name="Groupblueicon" width="21" height="20"/>
         <image name="Groupgrayicon" width="21" height="21"/>
         <image name="Leavegroup" width="56" height="56"/>
+        <image name="Notusericon" width="28" height="30"/>
         <image name="addMember" width="28" height="29"/>
     </resources>
 </document>
